# Aether

./: .gitignore  README.md  index.html  package-lock.json  package.json  start.bat  start.sh  system_prompt.txt  tailwind.config.d.ts  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  updater.json  vite.config.js  vite.config.ts
engine/: .env.example  engine-x86_64-pc-windows-msvc.spec  pyproject.toml  requirements.txt
engine/aether/: __init__.py  config.py  mcp_client.py  registry.py  server.py
engine/aether/api/: __init__.py  chat.py
engine/aether/cortex/: __init__.py  graph.py  pathways.py  router.py
engine/aether/cortex/metrics/: __init__.py  phi.py
engine/aether/cortex/nodes/: __init__.py  analytical.py  base.py  creative.py
engine/aether/evolution/: __init__.py  loop.py  mutations.py  safety.py  selection.py
engine/aether/memory/: __init__.py  vector_store.py
engine/aether/metacognition/: __init__.py  calibration.py  evaluator.py  monitor.py  planner.py
engine/aether/providers/: base.py  claude.py  ollama.py  openrouter.py  registry.py
engine/aether/swarm/: __init__.py  node.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: engine.rs  mod.rs  models.rs  settings.rs
src-tauri/src/models/: mod.rs
src/components/layout/: Header.tsx  Sidebar.tsx  StatusBar.tsx
src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Select.tsx
src/features/cortex/: CortexView.tsx
src/features/evolution/: EvolutionView.tsx
src/features/models/: ModelsView.tsx
src/features/playground/: ChatInput.tsx  MessageBubble.tsx  PlaygroundView.tsx
src/features/settings/: SettingsView.tsx
src/hooks/: useAether.ts  useModels.ts  useStream.ts  useTheme.ts
src/lib/: api.ts  constants.ts  hooks.ts  store.ts  types.ts
src/styles/: animations.css  globals.css
