[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aether-engine"
version = "0.1.0"
description = "Aether — AI cognitive architecture engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Aether Team" },
]
keywords = ["ai", "cognitive-architecture", "llm", "streaming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "anthropic>=0.42.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.2.0",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
aether = "aether.server:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "ANN",  # flake8-annotations
    "ASYNC",# flake8-async
    "S",    # flake8-bandit
    "T20",  # flake8-print
    "RUF",  # ruff-specific
]
ignore = [
    "ANN101",  # missing self type annotation
    "ANN102",  # missing cls type annotation
    "S101",    # assert usage (fine in tests)
]

[tool.ruff.lint.isort]
known-first-party = ["aether"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
